--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "next": "12.0.10",
+    "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
