--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "next": "12.0.10",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
