--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.0.10",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
