--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "simple-react-lightbox": "^3.6.9-0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
