--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "simple-react-lightbox": "^3.6.9-0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
