--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "kalend": "^0.9.4",
+    "moment": "^2.29.1",
     "next": "12.0.10",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
