--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-google-maps": "^9.4.5",
     "simple-react-lightbox": "^3.6.9-0"
   },
   "devDependencies": {
