--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "emailjs-com": "^3.2.0",
     "kalend": "^0.9.4",
     "moment": "^2.29.1",
     "next": "12.0.10",
