--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@popperjs/core": "^2.11.2",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
