--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "17.0.2",
     "react-google-maps": "^9.4.5",
     "simple-react-lightbox": "^3.6.9-0"
