--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
+    "flowbite": "^1.3.3",
     "kalend": "^0.9.4",
     "moment": "^2.29.1",
     "next": "12.0.10",
@@ -24,6 +25,7 @@
     "react-card-flip": "^1.1.5",
     "react-dom": "17.0.2",
     "react-google-maps": "^9.4.5",
+    "react-tooltip": "^4.2.21",
     "simple-react-lightbox": "^3.6.9-0"
   },
   "devDependencies": {
