--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-card-flip": "^1.1.5",
     "react-dom": "17.0.2",
     "react-google-maps": "^9.4.5",
+    "react-modal": "^3.14.4",
     "react-tooltip": "^4.2.21",
     "simple-react-lightbox": "^3.6.9-0"
   },
